assets/css/style.css
/* Police d'écriture */
@import url("../fonts/Raleway/Raleway-VariableFont_wght.ttf");
@import url("../fonts/Raleway/Raleway-Italic-VariableFont_wght.ttf");

html,
body {
  box-sizing: border-box;
  font-family: "Raleway", sans-serif;
}

a {
  text-decoration: none;
  color: black;
}

ul {
  list-style: none;
}

/* Reset des marges */
* {
  margin: 0;
  padding: 0;
}

/* Document */
body {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Header */
header {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

header a {
  font-size: 4vw;
  font-weight: 200;
}

#logo,
#inscription {
  width: 33%;
  margin: 7.5vw 0;
  align-self: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

#logo img {
  width: 25vw;
}

#inscription {
  font-weight: 600;
  color: #0065fc;
}

/* Navigation */
nav {
  width: 100%;
  align-self: flex-end;
  display: flex;
  align-items: flex-end;
}

nav ul {
  width: 100%;
  display: flex;
}

nav li {
  width: 50%;
  padding-bottom: 2vw;
  border-bottom: 0.75vw solid #f2f2f2;
}

nav .active {
  border-bottom: 0.75vw solid #0065fc;
}

nav .active a {
  color: #0065fc;
}

/* Main */
main {
  width: 100%;
  flex-grow: 1;
  margin: 5vw 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Filtres */
#filtres {
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 5vw;
}

/* Text */
#filtres h1 {
  font-weight: 600;
  font-size: 5.8vw;
  margin: 2vw 0;
}

#filtres > p {
  font-weight: 200;
  font-size: 4.2vw;
  margin: 1vw 0;
  align-self: flex-start;
}

/* Barre de recherche */
#search-bar {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 12vw;
  border: 0.3vw solid #f2f2f2;
  border-radius: 3.75vw;
  margin: 7vw 0;
}

#localiser-btn,
#textfield,
#search-btn {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
}

/* Bouton localiser */
#localiser-btn {
  width: 13%;
  height: 100.5%;
  background-color: #f2f2f2;
  border-radius: 3.75vw 0 0 3.75vw;
  font-size: 4.25vw;
  color: black;
}

/* Champ de recherche */
#textfield {
  width: 74%;
}

#textfield input {
  width: 100%;
  height: 100%;
  border: none;
  font-size: 4.5vw;
  font-weight: 600;
  padding-left: 4vw;
}

/* Bouton rechercher */
#search-btn {
  width: 13%;
  height: 100.5%;
  background-color: #0065fc;
  border-radius: 3.75vw;
  color: white;
  font-size: 4.25vw;
}

#search-btn p {
  display: none;
}

/* Liste des filtres */
#filter-list {
  width: 100%;
}

#filter-list h3 {
  font-size: 4.25vw;
  margin: 2vw 0;
}

#filter-list ul {
  padding: 0;
  display: flex;
  flex-wrap: wrap;
}

#filter-list li {
  height: 12vw;
  border: 0.6vw solid #f2f2f2;
  border-left: 0.6vw solid #deebff;
  border-radius: 50vw;
  margin: 2vw 2vw 2vw 0;
  transition: all 0.3s ease-out;
}

#filter-list li:hover {
  background-color: #deebff;
  border: 0.6vw solid #deebff;
}

#filter-list a {
  height: 100%;
  display: flex;
  align-items: center;
}

.filter-btn {
  width: 13vw;
  height: 13vw;
  position: relative;
  right: 0.6vw;
  border-radius: 50%;
  background-color: #deebff;
  color: #0065fc;
  font-size: 4.25vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

#filter-list p {
  font-weight: bold;
  font-size: 4vw;
  margin: 0 4.2vw;
}

/* Résultats */
#search-results {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin: 5vw 0;
  width: 100%;
}

#info-icon {
  width: 6vw;
  height: 6vw;
  color: #0065fc;
  font-size: 3.25vw;
  border: 0.5vw solid #f2f2f2;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#search-results p {
  font-size: 4vw;
  font-weight: 200;
  width: 88%;
}

/* Hébergements */
#hebergements,
#activites {
  width: 100%;
  display: flex;
  flex-direction: column;
}

#hebergements ul,
#activites ul {
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 3vw;
}

#hebergements li,
#activites li {
  width: 100%;
}

#hebergements li > a {
  display: flex;
  margin: 3vw 0;
  padding: 1.5vw;
  border-radius: 5vw;
  box-shadow: 0 1vw 2vw #cecece;
}

#hebergements .thumbnail,
#activites .thumbnail {
  overflow: hidden;
}

#hebergements .thumbnail img,
#activites .thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

#hebergements .infos,
#activites .info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#hebergements h4 {
  font-size: 4.75vw;
}

#hebergements p {
  font-size: 4.25vw;
  font-weight: 200;
}

#hebergements .rating {
  font-size: 3.5vw;
  color: #0065fc;
}

#hebergements .rating .empty {
  color: #cccccc;
}

/* Tous */
#tous {
  order: 1;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5vw 0;
}

#tous h2 {
  width: 90%;
  font-size: 5.5vw;
  margin: 5vw 0;
}

#tous li > a {
  height: 50vw;
  flex-direction: column;
}

#tous .thumbnail {
  width: 100%;
  height: 75%;
  border-radius: 4vw 4vw 0 0;
}

#tous .infos {
  height: 25%;
  padding: 3vw;
}

#tous a {
  align-self: flex-start;
  font-weight: 600;
  font-size: 4.5vw;
  margin: 5vw;
}

/* Populaires */
#populaires {
  width: 100%;
  background-color: #f2f2f2;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5vw 0;
}

#populaires h2 {
  width: 90%;
  font-size: 5.5vw;
  display: flex;
  justify-content: space-between;
  margin: 5vw 0;
}

#populaires li > a {
  height: 37.5vw;
  background-color: white;
}

#populaires .thumbnail {
  width: 45%;
  height: 100%;
  border-radius: 4vw 0 0 4vw;
}

#populaires .infos {
  width: 55%;
  padding: 3vw 6vw;
}

#populaires p {
  margin: 3vw 0;
}

/* Activités */
#activites {
  align-items: center;
  padding: 4vw 0;
}
/* ... */

